<resources>

    <string name="app_name">TMSearch</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Your Name</string>
    <string name="nav_header_subtitle">your_email@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!--Navigation view menu-->
    <string name="menu_most_popular">Most Popular Movies</string>
    <string name="menu_top_rated">Top Rated Movies</string>
    <string name="menu_now_playing">Now Playing Movies</string>
    <string name="menu_upcoming">Upcoming Movies</string>
    <string name="menu_favorites">Favorites Movies</string>
    <string name="menu_config">Configuration</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_title_more">More</string>

    <string name="poster_movie_content_desc">movie poster</string>
    <string name="tmsearch_logo">logo app</string>
    <string name="search_hint">Search</string>

    <!--Toolbar title-->
    <string name="most_popular_title">Most Popular</string>
    <string name="top_rated_title">Top Rated</string>
    <string name="now_playing_title">Now Playing</string>
    <string name="upcoming_title">Upcoming</string>
    <string name="favorites_title">Favorites</string>
    <string name="exit_title">Exit</string>
    <string name="search_title">Search Results for</string>
    <string name="action_search">Search</string>

    <!-- activity_login -->
    <string name="ActivityLogin_editTextName">name</string>
    <string name="ActivityLogin_editTextEmail">email</string>
    <string name="ActivityLogin_editTextPassword">password</string>
    <string name="ActivityLogin_editTextTmdbKey">The Movie DB Key</string>
    <string name="ActivityLogin_buttonLogin">Login</string>

    <!--activity_detail-->
    <string name="vote_average_title">vote average</string>
    <string name="release_date_title">release date</string>
    <string name="vote_count_title">vote count</string>
    <string name="popularity_title">popularity</string>
    <string name="overview_title">Overview</string>
    <string name="reviews_title">Reviews</string>
    <string name="no_reviews">No reviews for this movie!</string>
    <string name="fab_content_description">Like</string>

    <!--activity_register-->
    <string name="ActivityRegister_buttonRegister">Create Account</string>
    <string name="ActivityRegister_back_content_description">Back button</string>

    <!--activity_config-->
    <string name="ActivityConfig_button_save_name">Change User Name</string>
    <string name="ActivityConfig_button_save_email">Change Credentials</string>
    <string name="ActivityConfig_button_save_key">Change Api Key</string>
    <string name="ActivityLogin_editTextOldPassword">old password</string>
    <string name="ActivityLogin_editTextNewPassword">new password</string>
    <string name="ActivityConfig_toolbarTitle">Configuration</string>

    <!--Widget-->
    <string name="appwidget_content_description">TMSearch Top 10 Popular Movies</string>
    <string name="appwidget_text">Top 10 Popular Movies</string>
    <string name="appwidget_popularity">Popularity:\ </string>
    <string name="appwidget_title">Title:\ </string>

    <!--AlertDialog-->
    <string name="alert_api_key_title">Api key not found</string>
    <string name="alert_api_key_message">You need a key to The Movie Db Api to continue. Please, insert it in configurations screen.</string>
    <string name="alert_api_key_btn_pos">Ok</string>
    <string name="exit_confirmation_title">Confirmation</string>
    <string name="exit_confirmation_message">Are you sure you want to exit?</string>
    <string name="exit_confirmation_pos">Yes</string>
    <string name="exit_confirmation_neg">No</string>
    <string name="alert_retrofit_fail_title">Request failed</string>
    <string name="alert_retrofit_fail_message">Sorry, there was a problem with the request. Please, try again.</string>
    <string name="alert_retrofit_fail_pos">Ok</string>

    <!--BroadcastReceiver-->
    <string name="bc_receiver_no_connectivity">noConnectivity=true</string>

    <!--Errors messages-->
    <string name="no_internet_snackbar">No internet connection…</string>
    <string name="no_internet_toast">No internet connection. Make sure Wi-Fi or cellular data is turned on, then try again.</string>

    <!--Firebase Auth Errors-->
    <string name="FirebaseAuthInvalidCredentialsException">It was not possible to connect to server with this credentials, please verify your credentials and try again.</string>
    <string name="FirebaseAuthInvalidUserException">Email not found, please verify your email address and try again.</string>
    <string name="FirebaseAuthGenericError">Login user error.</string>
    <string name="FirebaseAuthReauthenticateGenericError">Authentication of user error, please verify your internet connection and try again.</string>
    <string name="FirebaseAuthWeakPasswordException">Consider password with at least 6 catacters, please try again.</string>
    <string name="FirebaseAuthInvalidCredentialsExceptionCreateUsers">Email bad format, verify your email and try again.</string>
    <string name="FirebaseAuthUserCollisionException">Email address already exists, please type another email.</string>
    <string name="FirebaseAuthGenericErrorCreateUser">Create user error.</string>
    <string name="FirebaseNetworkException">Connection with the server error, please verify your connection and try again.</string>
    <string name="FirebaseAuthChangeEmailError">It was not possible to change email.</string>
    <string name="FirebaseAuthChangePasswordError">It was not possible to change password.</string>
    <string name="FirebaseDbSetApiKeyError">It was not possible to persist API Key.</string>

    <!--Form Errors-->
    <string name="EmailFieldEmptyError">Email required.</string>
    <string name="EmailFieldMalFormedError">Email bad format.</string>
    <string name="PasswordFieldEmptyError">Password required.</string>
    <string name="NameFieldEmptyError">Name required.</string>

    <!--ProgressBar Messages-->
    <string name="ProgressBarAnimationSignInUser">Login in your account...</string>
    <string name="ProgressBarAnimationCreatingUser">Creating user...</string>
    <string name="ProgressBarAnimationChangingConfigs">Changing configurations...</string>

</resources>
