<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_most_popular"
            android:icon="@drawable/baseline_local_movies_black_24"
            android:title="@string/menu_most_popular" />
        <item
            android:id="@+id/nav_top_rated"
            android:icon="@drawable/baseline_star_rate_black_24"
            android:title="@string/menu_top_rated" />
        <item
            android:id="@+id/nav_now_playing"
            android:icon="@drawable/baseline_play_arrow_black_24"
            android:title="@string/menu_now_playing" />
        <item
            android:id="@+id/nav_upcoming"
            android:icon="@drawable/baseline_access_time_black_24"
            android:title="@string/menu_upcoming" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/baseline_favorite_black_24"
            android:title="@string/menu_favorites" />
    </group>

    <item android:title="@string/menu_title_more">
        <menu>
            <item
                android:id="@+id/nav_config"
                android:icon="@drawable/baseline_settings_black_24"
                android:title="@string/menu_config" />

            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/baseline_exit_to_app_black_24"
                android:title="@string/menu_exit" />
        </menu>
    </item>

</menu>
