<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/parent_view">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            map:layout_constraintGuide_begin="@dimen/login_margin_guideline_left" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            map:layout_constraintGuide_end="@dimen/login_margin_guideline_right" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="32dp"
            android:background="@color/colorEditText"
            android:contentDescription="@string/tmsearch_logo"
            map:layout_constraintBottom_toTopOf="@+id/textInputEmail"
            map:layout_constraintEnd_toStartOf="@+id/guideline_right"
            map:layout_constraintStart_toStartOf="@+id/guideline_left"
            map:layout_constraintTop_toTopOf="parent" />
        <!--map:srcCompat="@drawable/logo" />-->

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            map:layout_constraintBottom_toTopOf="@+id/textInputPassword"
            map:layout_constraintEnd_toStartOf="@+id/guideline_right"
            map:layout_constraintStart_toStartOf="@+id/guideline_left">

            <EditText
                android:id="@+id/etEmailFieldInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/colorEditText"
                android:hint="@string/ActivityLogin_editTextEmail"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            map:layout_constraintBottom_toTopOf="@+id/btnLogin"
            map:layout_constraintEnd_toStartOf="@+id/guideline_right"
            map:layout_constraintStart_toStartOf="@+id/guideline_left">

            <EditText
                android:id="@+id/etPasswordFieldInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/colorEditText"
                android:hint="@string/ActivityLogin_editTextPassword"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@color/clSelectedBackground"
            android:text="@string/ActivityLogin_buttonLogin"
            android:textAllCaps="false"
            android:textColor="@color/colorTextColorButton"
            map:layout_constraintBottom_toTopOf="@id/tvRegister"
            map:layout_constraintEnd_toStartOf="@+id/guideline_right"
            map:layout_constraintStart_toStartOf="@+id/guideline_left" />

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/ActivityRegister_buttonRegister"
            map:layout_constraintBottom_toBottomOf="parent"
            map:layout_constraintEnd_toStartOf="@+id/guideline_right"
            map:layout_constraintStart_toStartOf="@+id/guideline_left" />


    </android.support.constraint.ConstraintLayout>


</ScrollView>