<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/parent_view">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/Toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            map:layout_constraintEnd_toEndOf="parent"
            map:layout_constraintStart_toStartOf="parent"
            map:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            map:layout_constraintGuide_begin="@dimen/login_margin_guideline_left" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            map:layout_constraintGuide_end="@dimen/login_margin_guideline_right" />

        <!--map:srcCompat="@drawable/logo" />-->

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            map:layout_constraintBottom_toTopOf="@+id/btnChangeName"
            map:layout_constraintEnd_toStartOf="@+id/guideline_right"
            map:layout_constraintStart_toStartOf="@+id/guideline_left"
            map:layout_constraintTop_toBottomOf="@+id/Toolbar">

            <EditText
                android:id="@+id/etNameFieldInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/colorEditText"
                android:hint="@string/ActivityLogin_editTextName"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnChangeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@color/clSelectedBackground"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/ActivityConfig_button_save_name"
            android:textAllCaps="false"
            android:textColor="@color/colorTextColorButton"
            map:layout_constraintBottom_toTopOf="@+id/div_name"
            map:layout_constraintEnd_toStartOf="@+id/guideline_right" />

        <View
            android:id="@+id/div_name"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:background="?android:attr/listDivider"
            map:layout_constraintBottom_toTopOf="@+id/textInputEmail"
            map:layout_constraintEnd_toEndOf="parent"
            map:layout_constraintStart_toStartOf="parent" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            map:layout_constraintBottom_toTopOf="@+id/textInputOldPassword"
            map:layout_constraintEnd_toStartOf="@+id/guideline_right"
            map:layout_constraintStart_toStartOf="@+id/guideline_left">

            <EditText
                android:id="@+id/etEmailFieldInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/colorEditText"
                android:hint="@string/ActivityLogin_editTextEmail"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputOldPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            map:layout_constraintBottom_toTopOf="@+id/textInputNewPassword"
            map:layout_constraintEnd_toStartOf="@+id/guideline_right"
            map:layout_constraintStart_toStartOf="@+id/guideline_left">

            <EditText
                android:id="@+id/etOldPasswordFieldInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/colorEditText"
                android:hint="@string/ActivityLogin_editTextOldPassword"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputNewPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            map:layout_constraintBottom_toTopOf="@+id/btnChangeEmail"
            map:layout_constraintEnd_toStartOf="@+id/guideline_right"
            map:layout_constraintStart_toStartOf="@+id/guideline_left">

            <EditText
                android:id="@+id/etNewPasswordFieldInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/colorEditText"
                android:hint="@string/ActivityLogin_editTextNewPassword"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnChangeEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@color/clSelectedBackground"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/ActivityConfig_button_save_email"
            android:textAllCaps="false"
            android:textColor="@color/colorTextColorButton"
            map:layout_constraintBottom_toTopOf="@+id/div_key"
            map:layout_constraintEnd_toStartOf="@+id/guideline_right" />

        <View
            android:id="@+id/div_key"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:background="?android:attr/listDivider"
            map:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
            map:layout_constraintEnd_toEndOf="parent"
            map:layout_constraintStart_toStartOf="parent" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            map:layout_constraintBottom_toTopOf="@+id/btnRegister"
            map:layout_constraintEnd_toStartOf="@+id/guideline_right"
            map:layout_constraintStart_toStartOf="@+id/guideline_left">

            <EditText
                android:id="@+id/etTmdbKeyFieldInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/colorEditText"
                android:hint="@string/ActivityLogin_editTextTmdbKey"
                android:inputType="textVisiblePassword"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@color/clSelectedBackground"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/ActivityConfig_button_save_key"
            android:textAllCaps="false"
            android:textColor="@color/colorTextColorButton"
            map:layout_constraintBottom_toBottomOf="parent"
            map:layout_constraintEnd_toStartOf="@+id/guideline_right" />


    </android.support.constraint.ConstraintLayout>


</ScrollView>